# spot-pricing

./: .gitignore  LICENSE  README.md  TODO.md  monthly-mail.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: contract.yaml  email_config_example.yaml  entsoe.py  excel.py  mailer.py  spot-pricing.py  zaptec.py
tests/: entsoe_test.py  zaptec_test.py
tests/data/: entsoe-2023-11.xml  zaptec-2023-11.json
